--- a/Day 3/Create a Hack to Help you Travel/Flight Delay Prediction/Flight_Delay_Predictions.ipynb
+++ b/Day 3/Create a Hack to Help you Travel/Flight Delay Prediction/Flight_Delay_Predictions.ipynb
@@ -6,7 +6,7 @@
     "id": "pn6Z-EQkmVos"
    },
    "source": [
-    "# <center>**Flight Delay Predictions**</center>"
+    "# **Flight Delay Predictions**"
    ]
   },
   {
